[gd_scene load_steps=12 format=2]

[ext_resource path="res://Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Laser.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asteroid.tscn" type="PackedScene" id=4]
[ext_resource path="res://arts/background.jpg" type="Texture" id=5]
[ext_resource path="res://powerUp.tscn" type="PackedScene" id=6]
[ext_resource path="res://shockwave.gdshader" type="Shader" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -4, 1, 0, 0, 0, 0, 1200, -1, 0, 0, 0, 0, 1199, 800, 0, 0, 0, 0, -4, 798, 0, 0, 0, 0, -4, 1 )
}

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/force = 0.1
shader_param/size = 0.0
shader_param/thickness = 0.179

[sub_resource type="Animation" id=3]
resource_name = "Pulse"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/force")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.03 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
laser_scene = ExtResource( 3 )
asteroid_scene = ExtResource( 4 )
powerup_scene = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 5 )

[node name="Ship" parent="." instance=ExtResource( 1 )]

[node name="MeteorTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="PowerUpTimer" type="Timer" parent="."]

[node name="AstreroidPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AstreroidPath"]
position = Vector2( -4, 1 )
rotation = -0.00166113

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 579, 347 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/Pulse = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="shoot" from="Ship" to="." method="_on_Ship_shoot"]
[connection signal="timeout" from="MeteorTimer" to="." method="_on_meteorTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
